--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #1d2634;
+  background-color: #f2ddcf;
   color: #9e9ea4;
   font-family: 'Montserrat', sans-serif;
 }
@@ -25,8 +25,8 @@ body {
 
 .close_icon {
   color: red;
-  margin-left: 30px;
-  margin-top: 10px;
+  margin-left: 80px;
+  margin-top: 5px;
   cursor: pointer;
 }
 
@@ -43,12 +43,15 @@ body {
 /* Header Start */
 .header {
   grid-area: header;
+  background-color: rgba(255, 255, 255, 0.73);
   height: 60px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 0 30px 0 30px;
   box-shadow: 0 6px 7px -3px rgba(0, 0, 0, 0.35);
+  border-radius: 50px;
+  margin: 20px;
 }
 
 .menu-icon {
@@ -57,6 +60,7 @@ body {
 
 .hed-icon {
   margin: 10px;
+  color: black;
 }
 
 /* End Header */
@@ -65,7 +69,7 @@ body {
 #sidebar {
   grid-area: sidebar;
   height: 100%;
-  background-color: #263043;
+  background-color: #feffffda;
   overflow-y: auto;
   transition: all 0.5s;
   -webkit-transition: all 0.5s;
@@ -75,7 +79,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 15px 30px 0px 30px;
+  padding: 5px 10px 0px 30px;
   margin-bottom: 30px;
 }
 
@@ -89,6 +93,16 @@ body {
   font-weight: 700;
 }
 
+.shop {
+  color: #000;
+}
+
+.logo {
+  color: #03263e;
+  margin: 20px;
+  font-size: 20px;
+}
+
 .sidebar-list {
   padding: 0;
   list-style-type: none;
@@ -97,10 +111,12 @@ body {
 .sidebar-list-item {
   padding: 20px 20px 20px 20px;
   font-size: 18px;
+  margin: 10px;
 }
 
 .sidebar-list-item:hover {
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: rgba(246, 189, 189, 0.749);
+  border-radius: 50px;
   cursor: pointer;
 }
 
@@ -134,6 +150,7 @@ body {
 .main-title {
   display: flex;
   justify-content: space-between;
+  color: black;
 }
 
 .main-cards {
@@ -183,6 +200,15 @@ body {
   gap: 20px;
   margin-top: 60px;
   height: 300px;
+}
+
+.calender {
+  display: flex;
+}
+
+.Didar {
+  color: #000;
+  font-size: large;
 }
 
 /* End Home style */
