--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,11 @@
 body {
   margin: 0;
   padding: 0;
-  background-color: #f2ddcf;
+  background-color: #fff1ee;
   color: #9e9ea4;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 .icon {
@@ -98,9 +100,21 @@ body {
 }
 
 .logo {
+  display: flex;
   color: #03263e;
-  margin: 20px;
+  margin: 5px;
   font-size: 20px;
+  align-items: center;
+}
+
+.logo img {
+  height: 40px;
+  width: 40px;
+  border-radius: 50px;
+}
+
+.logo h4 {
+  margin-left: 20px;
 }
 
 .sidebar-list {
@@ -115,7 +129,7 @@ body {
 }
 
 .sidebar-list-item:hover {
-  background-color: rgba(246, 189, 189, 0.749);
+  background-color: #ffd8c9;
   border-radius: 50px;
   cursor: pointer;
 }
@@ -148,12 +162,16 @@ body {
 }
 
 .main-title {
-  display: flex;
-  justify-content: space-between;
-  color: black;
+  /* display: flex;
+  justify-content: space-between; */
+  color: rgba(90, 86, 86, 0.976);
 }
 
 .main-cards {
+  background-color: #ffffff;
+  padding: 20px;
+  margin: 20px;
+  border-radius: 20px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   gap: 20px;
@@ -161,27 +179,29 @@ body {
 }
 
 .card {
-  display: flex;
+  display: grid;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: left;
   padding: 8px 15px;
-  border-radius: 5px;
+  border-radius: 15px;
+  color: #1e1e1ec8;
+
+}
+
+.card-category p {
+  color: rgba(134, 127, 127, 0.933);
 }
 
 .card:first-child {
-  background-color: #2962ff;
+  background-color: rgb(255, 216, 201);
 }
 
 .card:nth-child(2) {
-  background-color: #ff6d00;
+  background-color: rgb(153, 223, 255);
 }
 
 .card:nth-child(3) {
-  background-color: #2e7d32;
-}
-
-.card:nth-child(4) {
-  background-color: #d50000;
+  background-color: #ffe868;
 }
 
 .card-inner {
@@ -194,16 +214,21 @@ body {
   font-size: 25px;
 }
 
+.card_icon {
+  background-color: white;
+  padding: 10px;
+  border-radius: 50%;
+}
+
 .charts {
+  background-color: #ffffff;
+  padding: 15px;
+  border-radius: 20px;
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 20px;
   margin-top: 60px;
   height: 300px;
-}
-
-.calender {
-  display: flex;
 }
 
 /* End Home style */
@@ -262,7 +287,7 @@ body {
 
 .Sample header {
   background-color: #323639;
-  box-shadow: 0 0 8px rgba(171, 17, 17, 0.924);
+  box-shadow: 0 0 8px rgba(73, 13, 13, 0.924);
   padding: 20px;
   color: rgb(47, 41, 41);
 
@@ -270,13 +295,12 @@ body {
 
 .Sample__container {
   display: flex;
-  flex-direction: row;
+  /* flex-direction: row; */
   flex-wrap: wrap;
   align-items: flex-start;
-  margin: 18px;
-  padding: 10px;
-  color: #000;
-  border: 1px solid rgb(151, 142, 142);
+  color: #0f0f0f;
+  border: 2px solid rgb(151, 142, 142);
+  border-radius: 15px;
   background-color: #fefcfb;
 
 }
